--- a/base/_header.scss
+++ b/base/_header.scss
@@ -6,17 +6,17 @@ header{
     padding: 60px;
     
 
-span .nombre{
-    color: rgba(24, 2, 44, 0.644);
-    text-align: center;
-    font-size: 95px;
-    justify-content: center;
-    text-decoration: solid;
-    font-family:cursive;
-}
-nav ul li{
-        text-decoration: rgb(224, 90, 224);
+    span .nombre{
+        text-align: center;
+        font-size: 95px;
+        justify-content: center;
+        text-decoration: solid;
+        font-family:cursive;
+        color: $color-nombre;
+    }
+    nav ul li{
         text-align: right;
+        text-decoration: rgb(224, 90, 224);
         display: inline-block;
         text-decoration: solid;
         font-size: 30px;
