--- a/base/_medias queries.scss
+++ b/base/_medias queries.scss
@@ -3,13 +3,19 @@
     header{
         height: 15%;
         padding: 15px;
+    span .nombre{
+        font-size: 55px;
+    nav ul li{
+        font-size: 16px;
+    }
+    }
+    
     }
     main{
         height: 250vh;
     }
 
-    main adv ul il{
-        display:inline
+
         
 
     }
@@ -28,8 +34,18 @@
     
     .nosotros span p{
         color: rgb(63, 17, 100);
-        text-align:justify;
         font-size: 25px;
     }
 
-}
+    main .nosotros{
+        height: 550vh;
+        
+
+    }
+
+    .contacto{
+        div p{
+            font-size: 20px;
+        }
+    }
+ 
