--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,7 +38,7 @@ main {
   height: 800px;
   width: auto;
   background-color: rgba(81, 0, 156, 0.568);
-  background-image: url(../imagen/watercolour-1631417_640.jpg);
+  background-image: url(../imagen/watercolour-1631433_640-2.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -163,7 +163,7 @@ footer {
     font-size: 16px;
   }
   main {
-    height: 250vh;
+    height: 100%;
   }
 }
 main .imagenes {
@@ -175,13 +175,13 @@ main .imagenes {
   grid-gap: 10px;
 }
 
+main .nosotros {
+  height: 100%;
+}
+
 .nosotros span p {
   color: rgb(63, 17, 100);
   font-size: 25px;
-}
-
-main .nosotros {
-  height: 550vh;
 }
 
 .contacto div p {
