--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -13,7 +13,60 @@
 
 @import'../base/footer';
 
-@import'../base/medias\ queries';
+@media only screen and (min-width: 320px) and (max-width: 1024px) {
+    
+    header{
+        height: 15%;
+        padding: 15px;
+    span .nombre{
+        font-size: 55px;
+    nav ul li{
+        font-size: 16px;
+    }
+    }
+    
+    }
+    main{
+        height: 100%;
+    }
+
+
+        
+
+    }
+    main .imagenes{
+        margin-left: 20%;
+        margin-right: 20%;
+        grid-template-columns: 1fr;
+        grid-template-rows: 150px 150px 150px 150px;
+        grid-template-areas: 
+        "anillo"
+        "arito"
+        "pulsera"
+        "difusor";
+        grid-gap: 10px;
+    }
+    
+    main .nosotros{
+        height: 100%;
+        
+
+    }
+
+    .nosotros span p{
+        color: rgb(63, 17, 100);
+        font-size: 25px;
+        
+    }
+
+    
+    .contacto{
+        div p{
+            font-size: 20px;
+        }
+    }
+ 
+
 
 
 
