--- a/page scss/_contacto.scss
+++ b/page scss/_contacto.scss
@@ -1,4 +1,10 @@
 .contacto{
+    main{
+        height: 1500px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
     h1{
         margin-bottom: 35px;
     }
@@ -9,10 +15,49 @@
         color: $color-texto;
         
     }
-    .formulario form{
-        
-        text-align: center;
-        font-size: 30px;
+    form{
+        padding: 50px 55px;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+        border-radius: 20px;
+        align-items: center;
+        width: 340px;
+        margin: auto;
         
     }
-}
+    .input-group{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+
+    label{
+        color: $color-nombre;
+        font-size: 15px;
+        font-weight: 600;
+        margin-bottom: 15px;
+    }
+    
+    input, textarea{
+        padding: 17px, 25px;
+        border-radius: 25px;
+        margin-bottom: 20px;
+        background-color: azure;
+        border: 2px solid violet;
+        outline: none;
+
+    }
+    
+    .btn{
+        font-size: 16px;
+        color: violet;
+        border: 0;
+        border-radius: 25px;
+        background-color: blueviolet;
+        cursor: pointer;
+    }
+
+    .btn:hover{
+        background-color: $color-texto;
+    }
+    }
+    
