--- a/page scss/_tienda.scss
+++ b/page scss/_tienda.scss
@@ -2,4 +2,12 @@
     div h1{
         font-size: 50px;
     }
+
+    span p{
+        text-align: center;
+        font-size: 25px;
+        color: $color-nombre;
+    }
+    
+
 }
