--- a/page scss/_index.scss
+++ b/page scss/_index.scss
@@ -1,3 +1,10 @@
+span p{
+    text-align: center;
+    justify-content: center;
+    color: $color-texto;
+    font-size: 25px;
+}
+
 .imagenes{
     margin-top: 50px;
     margin-left: 350px;
