--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -15,17 +15,9 @@
 
 @media only screen and (min-width: 320px) and (max-width: 1024px) {
     
-    header{
-        height: 15%;
-        padding: 15px;
-    span .nombre{
-        font-size: 55px;
-    nav ul li{
-        font-size: 16px;
-    }
-    }
     
-    }
+    
+    
     main{
         height: 100%;
     }
@@ -33,7 +25,7 @@
 
         
 
-    }
+    
     main .imagenes{
         margin-left: 20%;
         margin-right: 20%;
@@ -60,11 +52,18 @@
     }
 
     
+
+    
     .contacto{
         div p{
             font-size: 20px;
         }
+        
+        .form{
+            margin-left: 0px;
+        }
     }
+}
  
 
 
